buttons no longer stretch when page is small

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,14 +19,17 @@ body {
     background-color: #673AB7;
     color: white;
     text-align: center;
+    max-height: 40px;
 }
 
 .our-button-secondary{
     border: 2px solid #673AB7;
+    max-height: 40px;
 }
 
 .our-button-inactive{
     border: 2px solid gray;
+    max-height: 40px;
 }
 
 .lobby{
